# fastapi-celery-playground

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
.helm/fastapi-celery-playground/: Chart.yaml  values.yaml
.helm/fastapi-celery-playground/templates/: ingress.yml
.helm/fastapi-celery-playground/templates/api/: deployment.yml  service.yml
.helm/fastapi-celery-playground/templates/celery/: deployment.yml
.helm/fastapi-celery-playground/templates/celery-flower/: deployment.yml  service.yml
.helm/fastapi-celery-playground/templates/configs/: redis-settings.yml
.helm/fastapi-celery-playground/templates/redis/: deployment.yml  service.yml
.k8s/local/api/: deployment.yml  service.yml
.k8s/local/celery/: deployment.yml
.k8s/local/celery-flower/: deployment.yml  service.yml
.k8s/local/configs/: redis-settings.yml
.k8s/local/redis/: deployment.yml  service.yml
api/: Dockerfile  main.py  requirements.txt
api/helpers/: celery_helper.py
api/routes/: api.py
api/routes/services/: health_check.py  process.py
celery_app/: Dockerfile  app.py  tasks.py
k8s/api/: deployment.yml  service.yml
k8s/celery/: deployment.yml
k8s/celery-flower/: deployment.yml  service.yml
k8s/local/: ingress.yml
k8s/local/api/: deployment.yml  service.yml
k8s/local/celery/: deployment.yml
k8s/local/celery-flower/: deployment.yml  service.yml
k8s/local/redis/: deployment.yml  service.yml
k8s/local/secrets/: secrets.example.yml
k8s/redis/: deployment.yml  service.yml
